--- a/components/molecule/editableDiv/style.module.css
+++ b/components/molecule/editableDiv/style.module.css
@@ -1,42 +1,47 @@
-.container {
-  position: relative;
-  border-radius: var(--radius-04);
+.contentAndPlaceholderWrapper {
+	transition: none;
+	position: relative;
+	width: 100%;
 }
 
-.container::before {
-  content: '';
-  position: absolute;
-  left: 1px;
-  top: 50%;
-  width: calc(64px + 1px + var(--dimension-04));
-  height: var(--dimension-48);
-  transform: translate(-100%, -50%);
+.contentAndPlaceholderWrapper::before {
+	content: '';
+	position: absolute;
+	left: 1px;
+	top: 50%;
+	width: calc(64px + 1px + var(--dimension-04));
+	height: var(--dimension-48);
+	transform: translate(-100%, -50%);
 }
 
-.placeholder, .content {
+.placeholder, .contentDefault {
+	transition: none;
+	flex: 1;
+	width: 100%;
   overflow-wrap: anywhere;
 }
 
-.content {
+.contentDefault {
   position: relative;
   z-index: 2;
   outline: none;
   border: none;
-  color: var(--label-normal)
+  color: var(--label-normal);
 }
 
 .placeholder {
   z-index: 1;
   position: absolute;
   inset: 0;
-  color: var(--label-alternative);
+  color: var(--label-alternative) !important;
 }
 
 .controllSection {
   position: absolute;
-  top: -2px;
+	top: 0;
   left: 0;
   transform: translateX(-100%);
+	transition: none;
 }
 
 .controlButton {
@@ -63,3 +68,82 @@
 
 .controlButtonAdd {cursor: pointer;}
 .controlButtonDragIndicator {cursor: grab;}
+
+.textTypeList {
+	min-height: 0;
+}
+
+.textTypeItem {
+	cursor: pointer;
+	padding: var(--dimension-02) var(--dimension-08);
+	outline: none;
+}
+
+.textTypeItem:focus {
+	border-radius: var(--radius-04);
+	background-color: var(--interaction-hover);
+}
+
+.textTypeItem::before {
+	border-radius: var(--radius-04);
+}
+
+.textTypeEmpty {
+	padding: var(--dimension-16) var(--dimension-08);
+}
+.textTypeEmpty>p {
+	text-align: center;
+}
+
+.h1TopPosition {
+	top: 5px;
+}
+
+.h2TopPosition {
+	top: 2px;
+}
+
+.h1 {
+	margin-top: var(--dimension-16);
+}
+.h1 > *{
+	font-size: var(--typo-xxlarge-font-size);
+	font-weight: var(--typo-font-weight-accent);
+	line-height: var(--typo-xxlarge-line-height);
+	color: var(--label-strong);
+}
+
+.h2 {
+	margin-top: var(--dimension-16);
+}
+.h2 > * {
+	font-size: var(--typo-xlarge-font-size);
+	font-weight: var(--typo-font-weight-accent);
+	line-height: var(--typo-xlarge-line-height);
+	color: var(--label-strong);
+}
+
+.content > *, .list > * {
+	font-size: var(--typo-medium-font-size);
+	line-height: var(--typo-medium-line-height);
+	color: var(--label-normal);
+}
+
+.contentTopPosition, .listTopPosition {
+	top: -1px;
+}
+
+.content {
+	margin-top: var(--dimension-08);
+}
+
+.list:first-child {
+	margin-top: var(--dimension-08);
+}
+
+.footnote > * {
+	font-size: var(--typo-small-font-size);
+	font-weight: var(--typo-font-weight-normal);
+	line-height: var(--typo-small-line-height);
+	color: var(--label-alternative);
+}
