--- a/components/molecule/editableDiv/style.module.css
+++ b/components/molecule/editableDiv/style.module.css
@@ -108,9 +108,9 @@
 }
 .h1 > *{
 	font-size: var(--typo-xxlarge-font-size);
-	font-weight: var(--typo-font-weight-accent);
-	line-height: var(--typo-xxlarge-line-height);
-	color: var(--label-strong);
+  font-weight: var(--typo-font-weight-accent);
+  line-height: var(--typo-xxlarge-line-height);
+  color: var(--label-strong);
 }
 
 .h2 {
@@ -146,4 +146,105 @@
 	font-weight: var(--typo-font-weight-normal);
 	line-height: var(--typo-small-line-height);
 	color: var(--label-alternative);
+}
+
+.imagePlaceholder {
+  z-index: 1;
+  position: relative;
+  padding: var(--dimension-16);
+  background-color: var(--container-normal);
+  border: 1px solid var(--line-border);
+  border-radius: var(--radius-16);
+}
+
+.imagePlaceholder::before {
+  border-radius: var(--radius-16);
+}
+
+.imageInput {
+  cursor: pointer;
+  transition: none;
+  opacity: 0;
+  position: absolute;
+  inset: 0;
+}
+
+.imageWrapper {
+  position: relative;
+  transition: none;
+  max-width: 100%;
+}
+
+.imageControl {
+  padding: var(--dimension-04);
+  position: absolute;
+  inset: 0;
+  z-index: 2;
+}
+
+.imageWidthControl, .imageWidthControlPosRight {
+  position: absolute;
+  top: 50%;
+  left: 4px;
+  transform: translateY(-50%);
+  width: 6px;
+  height: 30%;
+  background-color: var(--gray-40);
+  border: 1px solid var(--static-white);
+  border-radius: var(--radius-99);
+}
+
+.imageWidthControlPosRight {
+  left: calc(100% - 4px);
+  transform: translate(-100%, -50%);
+}
+
+.imageControlButtonGroup {
+  padding: var(--dimension-08);
+  background-color: var(--gray-40);
+  border: 1px solid var(--static-white);
+  border-radius: var(--radius-08);
+  position: absolute;
+  top: 4px;
+  right: 4px;
+}
+
+.imageControlButton {
+  display: flex;
+  cursor: pointer;
+}
+
+.imageControlButton > svg {
+  fill: var(--static-white)
+}
+
+.image {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.imageAlignControlOptionWrapper {
+  position: relative;
+}
+
+.imageAlignControlOption {
+  position: absolute;
+  left: 50%;
+  bottom: -4px;
+  transform: translate(-50%, 100%);
+  background-color: var(--gray-40);
+  border: 1px solid var(--static-white);
+  padding: var(--dimension-04);
+  border-radius: var(--radius-04);
+}
+
+.imageControlActiveAlign{
+  fill: var(--static-white);
+}
+
+.imageControlAlign{
+  fill: var(--gray-30);
 }
