--- a/components/_chan/renew/valueTypeText/style.module.css
+++ b/components/_chan/renew/valueTypeText/style.module.css
@@ -2,7 +2,9 @@
   position: relative;
 }
 
-.input, .placeholder {width: 100%;}
+.input, .placeholder {
+  width: 100%;
+}
 
 .input {
   position: relative;
@@ -11,6 +13,8 @@
   border-radius: var(--radius-00);
   border: none;
   outline: none;
+  -webkit-user-modify: read-write;
+  /*--whenContentEditable--WebkitUserModify: read-write-plaintext-only;*/
 }
 
 .placeholder {
